# MorghSpicy

./: .gitignore  CMakeLists.txt  Common_Includes.h  main.cpp  my_circuit.txt
Controller/: CommandParser.cpp  CommandParser.h  Exceptions.h  Signal.cpp  Signal.h  SimConfig.cpp  SimConfig.h  SimulationRunner.cpp  SimulationRunner.h  SimulatorController.cpp  SimulatorController.h
Model/: CommandParser.cpp  CommandParser.h  Edge.h  ElementTypes.h  Elements.cpp  Elements.h  Graph.cpp  Graph.h  MNASolver.cpp  MNASolver.h  Node.h  NodeManager.cpp  NodeManager.h  NodeNaming.h
Model/schematics/: circuit_rc.txt  simple_resistor.txt
View/: App.cpp  App.h  CircuitGrid.cpp  CircuitGrid.h  Plotter.cpp  Plotter.h  button.cpp  button.h
schematics/: rc_step.txt
